<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/id_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_imagem"
            style="@style/EstiloSegundario"
            android:layout_width="88dp"
            android:layout_height="88dp" />

        <TextView
            android:id="@+id/id_nome"
            android:text="@string/nome_praça"
            style="@style/EstiloSegundario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/id_endereco"
        style="@style/EstiloSegundario"
        android:text="@string/endereco_praça"/>

    <TextView
        android:id="@+id/id_horario"
        style="@style/EstiloSegundario"
        android:text="@string/horario_praça" />


    <TextView
        android:id="@+id/id_telefone"
        style="@style/EstiloSegundario" />


</LinearLayout>
